giving structure to html

--- a/index.html
+++ b/index.html
@@ -7,45 +7,65 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
-<header>
-    <div>
-       <h1>James Gitchell</h1>
+<header class="headOfPage">
+  <div class="nameContainer">
+    <div id="nameFlair">
+        <h1>James Gitchell</h1>
     </div>
-    <div>
-      <p>Software Engineer</p>
+    <div id="careerFlair">
+        <p>Software Engineer</p>
     </div>
+  </div>
+
+    <section>
+        <div class="headNav">
+          <nav>
+              <a href="/index.html"     class="">Home</a> 
+              <a href="/about.html"     class="">About</a>
+              <a href="/contact.html"   class="">Contact</a>
+              <a href="/projects.html"  class="">Projects</a>
+          </nav>  
+        </div>
+    </section>
+    
 </header>
 
 <body>
-
-
-<section>
-    <div>
-      <nav>
-          <a href="/index.html"     class="">Home</a> 
-          <a href="/about.html"     class="">About</a>
-          <a href="/contact.html"   class="">Contact</a>
-          <a href="/projects.html"  class="">Projects</a>
-      </nav>  
-    </div>
-</section>
-
-<section>
+  <div id="bodyBackground">
+    <section class="imageOfMe">
+        <img src="/picture-assets/FB_IMG_1612284190000.jpg" alt="portrait of Wes">
+    </section>
     
-</section>
-<section>
+    <section>
+      <h2>Info about me</h2>
+    </section>
+  
+    <section>
+      <h2>About Me</h2>
+    </section>
+   
+    <section>
+      <h2>Contact</h2>
+    </section>
 
-</section>
-
+  </div>
 </body>
 
 <footer>
+  <div class="">
+    <section>
+        <nav>
+            <a href="/index.html"     class="">Home</a> 
+            <a href="/about.html"     class="">About</a>
+            <a href="/contact.html"   class="">Contact</a>
+            <a href="/projects.html"  class="">Projects</a>
+        </nav>
+    </section>
 
-
-
-
-
-
+    <section>
+      <p>copywrite info and icon</p>
+    </section>
+  </div>
 </footer>
 
 
