--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
+  <div id="outsideContainer">
+
 <header class="headOfPage">
   <div class="nameContainer">
     <div id="nameFlair">
@@ -17,7 +19,7 @@
     </div>
   </div>
 
-    <section>
+    <section id="testHeadRight">
         <div class="headNav">
           <nav>
               <a href="/index.html"     class="">Home</a> 
@@ -32,7 +34,7 @@
 
 <body>
   <div id="bodyBackground">
-    <section class="imageOfMe">
+    <section id="imageOfMe">
         <img src="/picture-assets/FB_IMG_1612284190000.jpg" alt="portrait of Wes">
     </section>
     
@@ -67,7 +69,7 @@
     </section>
   </div>
 </footer>
-
+</div>
 
 
 
