--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
   </div>
 </body>
 
-<footer>
+<footer id="justTheFoot">
   <div class="">
-    <section>
+    <section class="footerNav">
         <nav>
             <a href="/index.html"     class="">Home</a> 
             <a href="/about.html"     class="">About</a>
