had some problems...starting over

--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
   <div id="outsideContainer">
 
 <header class="headOfPage">
+  <div id="boxForName">
   <div class="nameContainer">
-    <div id="nameFlair">
-        <h1>James Gitchell</h1>
+       <h1>James Gitchell</h1>
     </div>
     <div id="careerFlair">
         <p>Software Engineer</p>
     </div>
-  </div>
-
+    </div>
     <section id="testHeadRight">
         <div class="headNav">
           <nav>
